; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_auth_token.c_check_hmac_token.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_auth_token.c_check_hmac_token.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TOKEN_DATA_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i8*)* @check_hmac_token to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_hmac_token(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca [32 x i32], align 16
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @hmac_ctx_size(i32* %9)
  %11 = icmp eq i32 %10, 32
  %12 = zext i1 %11 to i32
  %13 = call i32 @ASSERT(i32 %12)
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @hmac_ctx_reset(i32* %14)
  %16 = load i32*, i32** %4, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = bitcast i8* %17 to i32*
  %19 = load i8*, i8** %6, align 8
  %20 = call i64 @strlen(i8* %19)
  %21 = trunc i64 %20 to i32
  %22 = call i32 @hmac_ctx_update(i32* %16, i32* %18, i32 %21)
  %23 = load i32*, i32** %4, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = load i32, i32* @TOKEN_DATA_LEN, align 4
  %26 = sub nsw i32 %25, 32
  %27 = call i32 @hmac_ctx_update(i32* %23, i32* %24, i32 %26)
  %28 = load i32*, i32** %4, align 8
  %29 = getelementptr inbounds [32 x i32], [32 x i32]* %7, i64 0, i64 0
  %30 = call i32 @hmac_ctx_final(i32* %28, i32* %29)
  %31 = load i32*, i32** %5, align 8
  %32 = load i32, i32* @TOKEN_DATA_LEN, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i32, i32* %31, i64 %33
  %35 = getelementptr inbounds i32, i32* %34, i64 -32
  store i32* %35, i32** %8, align 8
  %36 = bitcast [32 x i32]* %7 to i32**
  %37 = load i32*, i32** %8, align 8
  %38 = call i64 @memcmp_constant_time(i32** %36, i32* %37, i32 32)
  %39 = icmp eq i64 %38, 0
  %40 = zext i1 %39 to i32
  ret i32 %40
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @hmac_ctx_size(i32*) #1

declare dso_local i32 @hmac_ctx_reset(i32*) #1

declare dso_local i32 @hmac_ctx_update(i32*, i32*, i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @hmac_ctx_final(i32*, i32*) #1

declare dso_local i64 @memcmp_constant_time(i32**, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
